tests/ui/consts/const-suggest-feature.stderr
error[E0658]: cannot borrow here, since the borrowed element may contain interior mutability
  --> $DIR/const-suggest-feature.rs:5:13
   |
LL |     let y = &x;
   |             ^^
   |
   = note: see issue #80384 <https://github.com/rust-lang/rust/issues/80384> for more information
   = help: add `#![feature(const_refs_to_cell)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
